# app/Contracts/Http/V1/AuthControllerInterface.php
@@ -11,17 +11,46 @@ interface AuthControllerInterface
      * @OA\Post(
      *     path="/api/v1/login",
      *     summary="Log in a user",
+     *     tags={"Authentication"},
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(ref="#/components/schemas/Login")
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="Logged in successfully"
+     *         description="Logged in successfully",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="token",
+     *                 type="string",
+     *                 example="token here"
+     *             )
+     *         )
      *     ),
      *     @OA\Response(
      *         response=401,
-     *         description="Unauthorized"
+     *         description="Unauthorized",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="Invalid Credentials"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal Server Error",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 example="Could not create token"
+     *             )
+     *         )
      *     )
      * )
      */
@@ -46,31 +75,18 @@ interface AuthControllerInterface
      *         )
      *     ),
      *     @OA\Response(
-     *         response=401,
-     *         description="Unauthorized",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(
-     *                 property="error",
-     *                 type="string",
-     *                 example="could_not_invalidate_token"
-     *             )
-     *         )
-     *     ),
-     *     @OA\Response(
      *         response=500,
      *         description="Internal Server Error",
      *         @OA\JsonContent(
      *             type="object",
      *             @OA\Property(
-     *                 property="error",
+     *                 property="message",
      *                 type="string",
-     *                 example="could_not_invalidate_token"
+     *                 example="Could not invalidate token"
      *             )
      *         )
      *     )
      * )
      */
     public function logout(): JsonResponse;
-
 }
